<?xml version="1.0"?>
<package format="2">
  <name>fr_joint_velocity_controller</name>
  <version>0.0.0</version>
  <description>Defines a force-sensitive CBF controller</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="cbd@mit.edu">Charles Dawson</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>roscpp</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>eigen_conversions</depend>
  <depend>pluginlib</depend>
  <depend>franka_hw</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>libfranka</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/fr_joint_velocity_controller_plugin.xml" />
  </export>
</package>
